tests/pass/0082_function_call_expression_returns_nothing.ee
fn foo() {
}

fn main() {
    debugPrint(foo() == nothing);
    debugPrint(nothing == foo());
}
