tests/fail/0047_duplicate_function_name.ee
fn foo() {
}

fn foo() {
}

fn main() {
    foo();
}
